code/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: aws-alb
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: istio-system
  name: kubecost-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-04836d9495e77e9c5,subnet-028605a503ba7838c
    alb.ingress.kubernetes.io/target-group-attributes: load_balancing.algorithm.type=least_outstanding_requests
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
spec:
  ingressClassName: aws-alb
  rules:
  - http:
      paths:
      - path: /stub/
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
               number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
               number: 80
