code/eks/server.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: gateway
    namespace: istio-system
spec:
    selector:
      app: istio-ingressgateway
    servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: nginx
    namespace: apply
spec:
    gateways:
    - istio-system/gateway
    hosts:
      - "*"
    http:
    - route:
      - destination:
          host: service-stub.apply.svc.cluster.local
      match:
      - uri:
          prefix: "/stub"
    - route:
      - destination:
          host: service-root.apply.svc.cluster.local
